--- a/Arda/portfolio-aa.html
+++ b/Arda/portfolio-aa.html
@@ -51,7 +51,7 @@
 
 		<div class="content">
 			<h4 class="h4a">Mijn naam is </h4>
-			<h1>Brandon <span class="spana">Aouragh</span></h1>
+			<h1>Arda <span class="spana">Angun</span></h1>
 			<h3>Ik ben een Student developer</h3>
 		</div>
 	</div>
