--- a/Brandon/portfolio-aa.html
+++ b/Brandon/portfolio-aa.html
@@ -63,7 +63,7 @@
 			<div class="over-tekst">
 				<h2>Over Mij</h2>
 				<h5>Student developer<span class="spana"> & ontwikkelteam</span></h5>
-				<p>Mijn naam is Brandon Aouragh ik zit hier op het techniek college om software developer te worden wij maken dit project met behulp van de SCRUM methode. Ik heb veel geleerd over html en css die ik heb gebruikt in een paar projecten die we hebben gekregen. </p>
+				<p>Mijn naam is Brandon Lassche ik zit hier op het techniek college om software developer te worden wij maken dit project met behulp van de SCRUM methode. Ik heb veel geleerd over html en css die ik heb gebruikt in een paar projecten die we hebben gekregen. </p>
 			</div>
 		</div>
 	</section>
