--- a/Brandon/favorietegames-aa.html
+++ b/Brandon/favorietegames-aa.html
@@ -52,7 +52,7 @@
 		<div class="content">
 			<h4 class="h4a">Dit zijn de</h4>
 			<h1>Favoriete<span class="spana"> Games</span></h1>
-			<h3>Brandon <span class="spana">Aouragh</span></h3>
+			<h3>Brandon <span class="spana">lassche</span></h3>
 		</div>
 	</div>
 
